feature(dates): added date fields on todos
