# src/models/todo.model.ts
@@ -1,4 +1,4 @@
-import {Entity, model, property, belongsTo} from '@loopback/repository';
+import {belongsTo, Entity, model, property} from '@loopback/repository';
 import {TodoList} from './todo-list.model';
 
 @model()
@@ -16,9 +16,14 @@ export class Todo extends Entity {
   title?: string;
 
   @property({
-    type: 'boolean',
+    type: 'string',
   })
-  isComplete?: boolean;
+  status?: string;
+
+
+  @property({type: 'date'}) created?: Date;
+  @property({type: 'date'}) updated?: Date;
+  @property({type: 'date'}) dueDate?: Date;
 
   @belongsTo(() => TodoList, {name: 'todos'})
   todoListId: number;
